# todo-rs

./: Cargo.toml  README.md  example.todo  log.txt  test.json  test.yml
src/: main.rs  parser.rs
